<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    tools:context="com.parra.lfelipe.session.MainActivity">
    <!--Como hacer un comentario-->
    <!-- -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulacio"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/usuario"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilNombre">
                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/nombre"
                    android:layout_height="wrap_content"
                    android:id="@+id/eNombre"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/contraseña"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPassword1">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password1"
                    android:id="@+id/ePassword1"
                    android:inputType="numberPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/contraseña2"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPassword2">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password2"
                    android:id="@+id/ePassword2"
                    android:inputType="numberPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/correo"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilCelular">
                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/correo"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="20"
                    android:id="@+id/eCorreo"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Sexo:"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rMasculino"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:checked="true"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/rFemenino"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cuidad"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            <Spinner
                android:id="@+id/sCuidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/avNacimiento"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eFecha"
                android:editable="false"
                android:onClick="asignarFecha"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avHobbie"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox android:id="@+id/cCine"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cine"/>
                <CheckBox android:id="@+id/cComer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/comer"/>
                <CheckBox android:id="@+id/cDeporte"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/deporte"/>
                <CheckBox android:id="@+id/cDormir"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/dormir"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/greenyellow"
                android:id="@+id/bRegistrar"
                android:textSize="15sp"
                android:onClick="Registrar"
                android:text="@string/registrar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/red"
                android:textSize="20dp"
                android:id="@+id/tInfo"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>